--- a/package.json
+++ b/package.json
@@ -16,8 +16,16 @@
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.13",
         "postcss-import": "^14.0.1",
+        "resolve-url-loader": "^5.0.0",
         "tailwindcss": "^3.0.0"
+    },
+    "dependencies": {
+        "@popperjs/core": "^2.11.5",
+        "bootstrap": "^4.1.3",
+        "sass": "^1.51.0",
+        "sass-loader": "^12.6.0",
+        "webpack": "^5.72.1"
     }
 }
